--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
       <h1 class="text-center">Frequently Asked <span class="text-warning" >Question</span></h1>
 
       <div class="row">
-        <div class="col text-center mt-5">
+        <div class="col-sm-12 col-md-6 text-center mt-5">
           <img class="w-50" src="images/faq.png" alt="">
         </div>
-        <div class="col mt-5 text-center">
+        <div class="col-sm-12 col-md-6 mt-5 text-center">
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
